--- a/Scrapping/Scrapping/appsettings.json
+++ b/Scrapping/Scrapping/appsettings.json
@@ -1,9 +1,10 @@
 ﻿{
   "SeleniumConfigurations": {
-    "UrlPagina": "https://localhost:7181/",
+    "UrlPage": "https://localhost:7181/",
     "Timeout": 5,
     "Headless": 0,
     "Username": "teste",
-    "Password":  "123456"
+    "Password": "123456",
+    "Captcha": "Td4eVa"
   }
 }
