--- a/Scrapping/Scrapping/appsettings.json
+++ b/Scrapping/Scrapping/appsettings.json
@@ -2,9 +2,6 @@
   "SeleniumConfigurations": {
     "UrlPage": "https://localhost:7181/",
     "Timeout": 5,
-    "Headless": 0,
-    "Username": "teste",
-    "Password": "123456",
-    "Captcha": "Td4eVa"
+    "Headless": 0
   }
 }
